--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0"
   },
